# substreams-solana-spl-tokens

substreams-sol-spl-tokens/: Cargo.toml  Makefile  README.md  rust-toolchain.toml  substreams.yaml
substreams-sol-spl-tokens/proto/: spl_token.proto
substreams-sol-spl-tokens/src/: helper.rs  lib.rs
substreams-sol-spl-tokens/src/pb/: mod.rs  sol.spl_token.v1.rs
